--- a/sierra_adapter/sierra_item_merger/src/universal/conf/application.ini.template
+++ b/sierra_adapter/sierra_item_merger/src/universal/conf/application.ini.template
@@ -1,7 +1,7 @@
 -aws.sns.topic.arn=${topic_arn}
--aws.message.reader.sqs.parallelism=${sqs_parallelism}
--aws.message.reader.sqs.queue.url=${windows_queue_url}
--aws.message.reader.s3.bucketName=${sierra_items_bucket}
+-aws.sqs.parallelism=${sqs_parallelism}
+-aws.sqs.queue.url=${windows_queue_url}
+-aws.s3.bucketName=${sierra_items_bucket}
 -aws.metrics.namespace=${metrics_namespace}
 -aws.vhs.s3.bucketName=${bucket_name}
 -aws.vhs.s3.globalPrefix=sierra
