--- a/sierra_adapter/sierra_item_merger/src/main/resources/application.conf
+++ b/sierra_adapter/sierra_item_merger/src/main/resources/application.conf
@@ -1,8 +1,9 @@
 akka {
   actor {
     default-dispatcher {
-      fork-join-executor {
-        parallelism-max = 50
+      executor = "thread-pool-executor"
+      thread-pool-executor {
+        fixed-pool-size = 50
       }
     }
   }
