--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,7 @@ cache:
     - archive/notifier/target
     - archive/progress_async/target
     - archive/progress_http/target
+    - archive/registrar_http/target
     - archive/registrar/target
 
 # Based on instructions from
@@ -169,6 +170,7 @@ jobs:
     - env: TASK=registrar-test
     - env: TASK=progress_async-test
     - env: TASK=progress_http-test
+    - env: TASK=registrar_http-test
     - env: TASK=notifier-test
     - env: TASK=callback_stub_server-publish
 
