Actually pass the correct project name

--- a/archive/registrar_http/Dockerfile
+++ b/archive/registrar_http/Dockerfile
@@ -5,7 +5,7 @@ ADD target/universal/stage /opt/docker
 USER root
 RUN chown -R daemon:daemon /opt/docker
 
-ENV project=progress_http
+ENV project=registrar_http
 
 USER daemon
 CMD ["/run.sh"]
