--- a/archive/registrar_async/Dockerfile
+++ b/archive/registrar_async/Dockerfile
@@ -5,7 +5,7 @@ ADD target/universal/stage /opt/docker
 USER root
 RUN chown -R daemon:daemon /opt/docker
 
-ENV project=registrar
+ENV project=registrar_async
 
 USER daemon
 CMD ["/run.sh"]
