--- a/reindexer/Makefile
+++ b/reindexer/Makefile
@@ -5,7 +5,7 @@ STACK_ROOT 	= reindexer
 SBT_DOCKER_LIBRARIES =
 SBT_NO_DOCKER_LIBRARIES =
 
-SBT_APPS 	= reindex_request_creator
+SBT_APPS 	= reindex_worker
 ECS_TASKS 	=
 LAMBDAS 	=
 
