Remove an unused Lambda
This Lambda was last invoked in November 2017, and I don't think
anybody even remembers how to use it any more!

--- a/shared_infra/Makefile
+++ b/shared_infra/Makefile
@@ -10,8 +10,7 @@ ECS_TASKS   = sqs_freezeray sqs_redrive
 LAMBDAS     = drain_ecs_container_instance \
               dynamo_to_sns \
               dynamo_write_heartbeat \
-              ecs_ec2_instance_tagger \
-              run_ecs_task
+              ecs_ec2_instance_tagger
 
 TF_NAME     = shared_infra
 TF_PATH     = $(STACK_ROOT)
