Add a Lambda for sending snapshot alarms to Slack

--- a/data_api/Makefile
+++ b/data_api/Makefile
@@ -8,7 +8,7 @@ SBT_DOCKER_LIBRARIES =
 SBT_NO_DOCKER_LIBRARIES =
 
 ECS_TASKS   =
-LAMBDAS     = snapshot_scheduler
+LAMBDAS     = snapshot_scheduler snapshot_slack_alarms
 
 TF_NAME     =
 TF_PATH     =
