--- a/archive/progress_http/docker-compose.yml
+++ b/archive/progress_http/docker-compose.yml
@@ -2,3 +2,7 @@ dynamodb:
   image: peopleperhour/dynamodb
   ports:
     - "45678:8000"
+sns:
+  image: wellcome/fake-sns
+  ports:
+  - "9292:9292"
