Config and terraform

--- a/archive/progress_http/src/universal/conf/application.ini.template
+++ b/archive/progress_http/src/universal/conf/application.ini.template
@@ -1,3 +1,4 @@
 --archive-progress-tracker-table-name=${archive_progress_table_name}
 --metrics-namespace=progress_http
 --app-base-url=${app_base_url}
+--sns-topic-arn=${topic_arn}
