--- a/archive/progress_http/src/universal/conf/application.ini.template
+++ b/archive/progress_http/src/universal/conf/application.ini.template
@@ -1,4 +1,5 @@
 --archive-progress-tracker-table-name=${archive_progress_table_name}
 --metrics-namespace=progress_http
 --app-base-url=${app_base_url}
+--context-url=${context_url}
 --sns-topic-arn=${topic_arn}
