--- a/archive/notifier/src/universal/conf/application.ini.template
+++ b/archive/notifier/src/universal/conf/application.ini.template
@@ -1,3 +1,4 @@
 --sqs-queue-url=${notifier_queue_url}
 --sns-topic-arn=${progress_topic_arn}
+--context-url=${context_url}
 --metrics-namespace=notifier
