That should be a template, not a full config file

--- a/archive/notifier/Dockerfile
+++ b/archive/notifier/Dockerfile
@@ -7,4 +7,6 @@ ADD target/universal/stage /opt/docker
 
 EXPOSE 8888
 
-ENTRYPOINT ["/opt/docker/bin/notifier"]
+COPY run.sh /run.sh
+
+ENTRYPOINT ["/run.sh"]
