--- a/archive/registrar_async/Dockerfile
+++ b/archive/registrar_async/Dockerfile
@@ -2,4 +2,4 @@ FROM wellcome/typesafe_config_base:1
 
 ADD target/universal/stage /opt/docker
 
-ENV project=registrar_async
+ENV PROJECT=registrar_async
