--- a/archive/registrar_async/universal/conf/application.conf.template
+++ b/archive/registrar_async/universal/conf/application.conf.template
@@ -1,5 +1,6 @@
-sqs.queue.url="${queue_url}"
-sns.topic.arn="${progress_topic_arn}"
-vhs.dynamo.table.name="${vhs_table_name}"
-vhs.s3.bucket.name="${vhs_bucket_name}"
+aws.sqs.queue.url="${queue_url}"
+aws.sns.topic.arn="${progress_topic_arn}"
+aws.vhs.dynamo.tableName="${vhs_table_name}"
+aws.vhs.s3.bucketName="${vhs_bucket_name}"
+aws.vhs.s3.globalPrefix=archive
 metrics.namespace=registrar_async
