--- a/archive/notifier/src/universal/conf/application.conf.template
+++ b/archive/notifier/src/universal/conf/application.conf.template
@@ -1,4 +1,4 @@
 aws.sqs.queue.url="${notifier_queue_url}"
 aws.sns.topic.arn="${progress_topic_arn}"
-context-url="${context_url}"
+contextURL="${context_url}"
 metrics.namespace=notifier
