--- a/archive/notifier/Dockerfile
+++ b/archive/notifier/Dockerfile
@@ -1,12 +1,5 @@
-FROM anapsix/alpine-java
+FROM wellcome/typesafe_config_base:2
 
-RUN apk add --update gettext && rm -rf /var/cache/apk
-
-RUN mkdir -p /opt/docker
 ADD target/universal/stage /opt/docker
 
-EXPOSE 8888
-
-COPY run.sh /run.sh
-
-ENTRYPOINT ["/run.sh"]
+ENV PROJECT notifier
