--- a/archive/registrar_http/src/universal/conf/application.conf.template
+++ b/archive/registrar_http/src/universal/conf/application.conf.template
@@ -1,4 +1,7 @@
-aws.vhs.dynamo.table.name="${vhs_table_name}"
-aws.vhs.s3.bucket.name="${vhs_bucket_name}"
+aws.vhs.dynamo.tableName="${vhs_table_name}"
+aws.vhs.s3.bucketName="${vhs_bucket_name}"
+aws.vhs.s3.globalPrefix=archive
 http.externalBaseURL="${app_base_url}"
+http.host="0.0.0.0"
+http.port=9001
 contextURL="${context_url}"
