--- a/archive/archivist/src/universal/conf/application.conf.template
+++ b/archive/archivist/src/universal/conf/application.conf.template
@@ -1,5 +1,5 @@
 aws.sqs.queue.url="${queue_url}"
-aws.sns.registrar.topic-arn="${registrar_topic_arn}"
-aws.progress.sns.topic.arn="${progress_topic_arn}"
+aws.sns.registrar.topic.arn="${registrar_topic_arn}"
+aws.sns.progress.topic.arn="${progress_topic_arn}"
 upload.namespace="${archive_bucket}"
 metrics.namespace=archivist
