--- a/sierra_adapter/sierra_items_to_dynamo/Dockerfile
+++ b/sierra_adapter/sierra_items_to_dynamo/Dockerfile
@@ -1,11 +1,5 @@
-FROM wellcome/finatra_service_base
+FROM wellcome/typesafe_config_base:2
 
 ADD target/universal/stage /opt/docker
 
-USER root
-RUN chown -R daemon:daemon /opt/docker
-
-ENV project=sierra_items_to_dynamo
-
-USER daemon
-CMD ["/run.sh"]
+ENV PROJECT sierra_items_to_dynamo
