--- a/catalogue_pipeline/matcher/src/universal/conf/application.ini.template
+++ b/catalogue_pipeline/matcher/src/universal/conf/application.ini.template
@@ -4,5 +4,5 @@
 -aws.sns.topic.arn=${topic_arn}
 -aws.dynamo.tableName=${dynamo_table}
 -aws.dynamo.tableIndex=${dynamo_index}
--aws.dynamo.locking.service.lockTableName=${dynamo_lock_table}
--aws.dynamo.locking.service.lockTableIndexName=${dynamo_lock_table_index}
+-aws.locking.service.dynamo.lockTableName=${dynamo_lock_table}
+-aws.locking.service.dynamo.lockTableIndexName=${dynamo_lock_table_index}
