--- a/catalogue_pipeline/ingestor/Dockerfile
+++ b/catalogue_pipeline/ingestor/Dockerfile
@@ -1,11 +1,6 @@
-FROM wellcome/finatra_service_base
+FROM wellcome/typesafe_config_base:2
 
 ADD target/universal/stage /opt/docker
 
-USER root
-RUN chown -R daemon:daemon /opt/docker
+ENV PROJECT ingestor
 
-ENV project=ingestor
-
-USER daemon
-CMD ["/run.sh"]
