--- a/nginx/api-gw.nginx.conf
+++ b/nginx/api-gw.nginx.conf
@@ -5,11 +5,9 @@ events { worker_connections 1024; }
 http {
   server {
     listen 9000;
-
     server_tokens off;
-    server_name ${APP_HOST};
 
-    location ${HOST_PATH}/ {
+    location / {
       proxy_pass http://${APP_HOST}:${APP_PORT}/;
 
       add_header 'Access-Control-Allow-Origin' '*';
