Update to use the latest version of api-gw modules (#3014)
* Update to use the latest version of api-gw modules

* re-add nginx for api-gw

* adds nginx

* nginx fixes

* use correct nginx base dockerfile

* use tagged version of modules

* fmt

* Apply auto-formatting rules

* Delete gateway.tf

* Delete locals.tf

* Delete main.tf

* Delete nlb.tf

* Delete variables.tf

--- a/nginx/Makefile
+++ b/nginx/Makefile
@@ -19,6 +19,9 @@ endef
 nginx-build-api-delta:
 	$(call nginx_build_image,api-delta,Dockerfile)
 
+nginx-build-api-gw:
+	$(call nginx_build_image,api-gw,api-gw.Dockerfile.template)
+
 nginx-build-loris:
 	$(call nginx_build_image,loris,Dockerfile)
 
@@ -31,10 +34,13 @@ nginx-build-loris-delta:
 nginx-build-grafana:
 	$(call nginx_build_image,grafana,Dockerfile)
 
-nginx-build: nginx-build-api-delta nginx-build-loris nginx-build-services nginx-build-loris-delta nginx-build-grafana
+nginx-build: nginx-build-api-delta nginx-build-loris nginx-build-services nginx-build-loris-delta nginx-build-grafana nginx-build-api-gw
 
 nginx-publish-api-delta: nginx-build-api-delta
 	$(call publish_service,nginx_api-delta)
+
+nginx-publish-api-gw: nginx-build-api-gw
+	$(call publish_service,nginx_api-gw)
 
 nginx-publish-loris: nginx-build-loris
 	$(call publish_service,nginx_loris)
@@ -48,4 +54,4 @@ nginx-publish-loris-delta: nginx-build-loris-delta
 nginx-publish-grafana: nginx-build-grafana
 	$(call publish_service,nginx_grafana)
 
-nginx-publish: nginx-publish-api-delta nginx-publish-loris nginx-publish-services nginx-publish-loris-delta nginx-publish-grafana
+nginx-publish: nginx-publish-api-delta nginx-publish-loris nginx-publish-services nginx-publish-loris-delta nginx-publish-grafana nginx-publish-api-gw
