--- a/reporting/Makefile
+++ b/reporting/Makefile
@@ -8,7 +8,8 @@ SBT_NO_DOCKER_LIBRARIES =
 SBT_APPS 	=
 ECS_TASKS 	=
 LAMBDAS 	= miro_transformer \
-			  miro_inventory_transformer
+			  miro_inventory_transformer \
+			  sierra_transformer
 
 TF_NAME 	= reporting
 TF_PATH 	= $(STACK_ROOT)/terraform
