Quote _all_ the strings

--- a/sierra_adapter/sierra_reader/src/universal/conf/application.conf.template
+++ b/sierra_adapter/sierra_reader/src/universal/conf/application.conf.template
@@ -5,6 +5,6 @@ aws.sqs.parallelism=1
 sierra.apiURL="${sierra_api_url}"
 sierra.oauthKey="${sierra_oauth_key}"
 sierra.oauthSecret="${sierra_oauth_secret}"
-reader.batchSize=${batch_size}
-reader.fields=${sierra_fields}
-reader.resourceType=${resource_type}
+reader.batchSize="${batch_size}"
+reader.fields="${sierra_fields}"
+reader.resourceType="${resource_type}"
