--- a/catalogue_pipeline/transformer/transformer_sierra/Dockerfile
+++ b/catalogue_pipeline/transformer/transformer_sierra/Dockerfile
@@ -2,4 +2,4 @@ FROM wellcome/typesafe_config_base:2
 
 ADD target/universal/stage /opt/docker
 
-ENV PROJECT transformer
+ENV PROJECT transformer_sierra
