--- a/catalogue_pipeline/id_minter/src/universal/conf/application.conf.template
+++ b/catalogue_pipeline/id_minter/src/universal/conf/application.conf.template
@@ -2,9 +2,9 @@ aws.rds.host="${cluster_url}"
 aws.rds.identifiers.database="identifiers"
 aws.rds.identifiers.table="identifiers"
 aws.rds.password="${db_password}"
-aws.rds.port="${db_port}"
+aws.rds.port=${db_port}
 aws.rds.username="${db_username}"
-aws.rds.maxConnections="${max_connections}"
+aws.rds.maxConnections=${max_connections}
 aws.metrics.namespace="${metrics_namespace}"
 aws.message.writer.sns.topic.arn="${topic_arn}"
 aws.message.writer.s3.bucketName="${message_bucket_name}"
