--- a/infrastructure/critical/Makefile
+++ b/infrastructure/critical/Makefile
@@ -1,7 +1,7 @@
 ROOT = $(shell git rev-parse --show-toplevel)
 include $(ROOT)/functions.Makefile
 
-STACK_ROOT 	= infrastructure/infra_critical
+STACK_ROOT = infrastructure/critical
 
 SBT_APPS 	=
 SBT_DOCKER_LIBRARIES =
@@ -9,7 +9,6 @@ SBT_NO_DOCKER_LIBRARIES =
 
 ECS_TASKS 	=
 LAMBDAS 	= lambdas/dynamo_write_heartbeat
-
 
 TF_NAME 	= infra_critical
 TF_PATH 	= $(STACK_ROOT)/terraform
