Fix matcher config

--- a/catalogue_pipeline/matcher/src/universal/conf/application.conf.template
+++ b/catalogue_pipeline/matcher/src/universal/conf/application.conf.template
@@ -3,5 +3,5 @@ aws.metrics.namespace="${metrics_namespace}"
 aws.sns.topic.arn="${topic_arn}"
 aws.dynamo.tableName="${dynamo_table}"
 aws.dynamo.tableIndex="${dynamo_index}"
-aws.locking.service.dynamo.lockTableName="${dynamo_lock_table}"
-aws.locking.service.dynamo.lockTableIndexName="${dynamo_lock_table_index}"
+aws.locking.service.dynamo.tableName="${dynamo_lock_table}"
+aws.locking.service.dynamo.tableIndex="${dynamo_lock_table_index}"
