--- a/reindexer/reindex_worker/src/universal/conf/application.conf.template
+++ b/reindexer/reindex_worker/src/universal/conf/application.conf.template
@@ -1,3 +1,14 @@
+akka {
+  log-config-on-start = on
+  actor {
+    default-dispatcher {
+      executor = "thread-pool-executor"
+      thread-pool-executor {
+        fixed-pool-size = 50
+      }
+    }
+  }
+}
 aws.dynamo.tableName="${dynamo_table_name}"
 aws.sqs.parallelism="${sqs_parallelism}"
 aws.sqs.queue.url="${reindex_jobs_queue_id}"
