Sierra item merger is also broken

--- a/sierra_adapter/sierra_item_merger/src/universal/conf/application.conf.template
+++ b/sierra_adapter/sierra_item_merger/src/universal/conf/application.conf.template
@@ -1,3 +1,13 @@
+akka {
+  actor {
+    default-dispatcher {
+      executor = "thread-pool-executor"
+      thread-pool-executor {
+        fixed-pool-size = 50
+      }
+    }
+  }
+}
 aws.sns.topic.arn="${topic_arn}"
 aws.sqs.parallelism="${sqs_parallelism}"
 aws.sqs.queue.url="${windows_queue_url}"
