Try without quotes

--- a/reindexer/reindex_worker/src/main/resources/application.conf
+++ b/reindexer/reindex_worker/src/main/resources/application.conf
@@ -8,8 +8,8 @@ akka {
     }
   }
 }
-aws.dynamo.tableName="${dynamo_table_name}"
-aws.sqs.parallelism="${sqs_parallelism}"
-aws.sqs.queue.url="${reindex_jobs_queue_id}"
-aws.sns.topic.arn="${reindex_publish_topic_arn}"
-aws.metrics.namespace="${metrics_namespace}"
+aws.dynamo.tableName=${dynamo_table_name}
+aws.sqs.parallelism=${sqs_parallelism}
+aws.sqs.queue.url=${reindex_jobs_queue_id}
+aws.sns.topic.arn=${reindex_publish_topic_arn}
+aws.metrics.namespace=${metrics_namespace}
