And clean up the remains of the transformer_common project

--- a/catalogue_pipeline/transformer/Makefile
+++ b/catalogue_pipeline/transformer/Makefile
@@ -4,7 +4,7 @@ include $(ROOT)/functions.Makefile
 STACK_ROOT 	= catalogue_pipeline/transformer
 
 SBT_APPS 	= transformer_miro transformer_sierra
-SBT_DOCKER_LIBRARIES = transformer_common
+SBT_DOCKER_LIBRARIES =
 SBT_NO_DOCKER_LIBRARIES =
 
 ECS_TASKS 	=
