--- a/reindexer/reindex_worker/src/main/resources/application.conf
+++ b/reindexer/reindex_worker/src/main/resources/application.conf
@@ -1,13 +1,6 @@
-akka {
-  actor {
-    default-dispatcher {
-      executor = "thread-pool-executor"
-      thread-pool-executor {
-        fixed-pool-size = 50
-      }
-    }
-  }
-}
+akka.actor.default-dispatcher.executor = "thread-pool-executor"
+akka.actor.default-dispatcher.thread-pool-executor.fixed-pool-size = 50
+
 aws.dynamo.tableName=${?dynamo_table_name}
 aws.sqs.parallelism=${?sqs_parallelism}
 aws.sqs.queue.url=${?reindex_jobs_queue_id}
