Start plumbing the job config into the reindexer

--- a/reindexer/reindex_worker/src/main/resources/application.conf
+++ b/reindexer/reindex_worker/src/main/resources/application.conf
@@ -6,3 +6,5 @@ aws.sqs.parallelism=${?sqs_parallelism}
 aws.sqs.queue.url=${?reindex_jobs_queue_id}
 aws.sns.topic.arn=${?reindex_publish_topic_arn}
 aws.metrics.namespace=${?metrics_namespace}
+
+reindexer.jobConfig=${?reindexer_job_config_json}
