--- a/catalogue_pipeline/ingestor/docker-compose.yml
+++ b/catalogue_pipeline/ingestor/docker-compose.yml
@@ -3,7 +3,7 @@ sqs:
   ports:
     - "9324:9324"
 elasticsearch:
-  image: docker.elastic.co/elasticsearch/elasticsearch:5.6.6
+  image: "docker.elastic.co/elasticsearch/elasticsearch:6.4.0"
   ports:
     - "9200:9200"
     - "9300:9300"
