--- a/data_api/snapshot_generator/docker-compose.yml
+++ b/data_api/snapshot_generator/docker-compose.yml
@@ -11,7 +11,7 @@ s3:
   ports:
     - "33333:8000"
 elasticsearch:
-  image: docker.elastic.co/elasticsearch/elasticsearch:5.6.6
+  image: "docker.elastic.co/elasticsearch/elasticsearch:6.4.0"
   ports:
     - "9200:9200"
     - "9300:9300"
