New reporting sources (#3110)
* switch miro index to read from new, complete VHS table

* switch reindexer back to main miro table

* remove references to data field - source data is handed to us directly now

* add reporting_ prefix to lambdas

* add basic calm transformer

* merge sierra transformer

* add calm reporting tests

* move sierra to reporting_sierra

* Apply auto-formatting rules

* bump aws_utils to 2.2.1

* add reporting_ prefix to post_to_slack lambda

* rename reporting_sierra_transformer.py

* tidy up calm transformer

* break instead of stopiteration

* Apply auto-formatting rules

* minor sierra updates

* minor miro updates

* minor calm updates

* Apply auto-formatting rules

--- a/reporting/Makefile
+++ b/reporting/Makefile
@@ -7,8 +7,10 @@ SBT_NO_DOCKER_LIBRARIES =
 
 SBT_APPS 	=
 ECS_TASKS 	=
-LAMBDAS 	= miro_transformer \
-			  miro_inventory_transformer
+LAMBDAS 	= reporting_miro_transformer \
+			  reporting_miro_inventory_transformer \
+			  reporting_sierra_transformer \
+			  reporting_calm_transformer
 
 TF_NAME 	= reporting
 TF_PATH 	= $(STACK_ROOT)/terraform
