--- a/data_science/terraform/modules/dlami/templates/requirements.in
+++ b/data_science/terraform/modules/dlami/templates/requirements.in
@@ -7,3 +7,8 @@ tqdm==4.19.7
 torchvision==0.2.1
 nltk==3.3.0
 spacy==2.0.16
+netlsd==1.0.2
+umap-learn==0.3.7
+wikipedia==1.4.0
+nmslib==1.7.3.6
+cython==0.28.5
