--- a/archive/bag_replicator/src/universal/conf/application.conf.template
+++ b/archive/bag_replicator/src/universal/conf/application.conf.template
@@ -1,5 +1,5 @@
 aws.sqs.queue.url="${queue_url}"
 aws.progress.sns.topic.arn="${progress_topic_arn}"
-bag-replicator.storage.destination.namespace="${archvie_bucket_name}"
+bag-replicator.storage.destination.bucket="${archive_bucket_name}"
 bag-replicator.storage.destination.rootpath="/storage"
 metrics.namespace=replicator
