--- a/archive/bag_replicator/src/universal/conf/application.conf.template
+++ b/archive/bag_replicator/src/universal/conf/application.conf.template
@@ -2,4 +2,4 @@ aws.sqs.queue.url="${queue_url}"
 aws.progress.sns.topic.arn="${progress_topic_arn}"
 bag-replicator.storage.destination.bucket="${destination_bucket_name}"
 bag-replicator.storage.destination.rootpath="/storage"
-metrics.namespace=replicator
+metrics.namespace=bag-replicator
