--- a/archive/bag_replicator/src/main/resources/application.conf
+++ b/archive/bag_replicator/src/main/resources/application.conf
@@ -1,5 +1,6 @@
 aws.sqs.queue.url=${?queue_url}
 aws.progress.sns.topic.arn=${?progress_topic_arn}
+aws.outgoing.sns.topic.arn=${?outgoing_topic_arn}
 bag-replicator.storage.destination.bucket=${?destination_bucket_name}
 bag-replicator.storage.destination.rootpath="storage"
 metrics.namespace=bag-replicator
