replace simplified terraform

--- a/archive/Makefile
+++ b/archive/Makefile
@@ -10,4 +10,8 @@ SBT_NO_DOCKER_LIBRARIES = registrar_common archive_display
 ECS_TASKS   = bagger callback_stub_server
 LAMBDAS     = lambdas/trigger_bag_ingest
 
+TF_NAME     = archive
+TF_PATH     = $(STACK_ROOT)/terraform
+TF_IS_PUBLIC_FACING = false
+
 $(val $(call stack_setup))
