Allow archive applications to publish version to SSM

--- a/loris/Makefile
+++ b/loris/Makefile
@@ -5,6 +5,7 @@ STACK_ROOT 	= loris
 SBT_DOCKER_LIBRARIES =
 SBT_NO_DOCKER_LIBRARIES =
 
+SBT_SSM_APPS =
 SBT_APPS 	=
 ECS_TASKS 	= loris cache_cleaner
 LAMBDAS 	=
