--- a/reindexer/Makefile
+++ b/reindexer/Makefile
@@ -5,6 +5,7 @@ STACK_ROOT 	= reindexer
 SBT_DOCKER_LIBRARIES =
 SBT_NO_DOCKER_LIBRARIES =
 
+SBT_SSM_APPS =
 SBT_APPS 	= reindex_worker
 ECS_TASKS 	=
 LAMBDAS 	=
