--- a/storage/Makefile
+++ b/storage/Makefile
@@ -4,7 +4,7 @@ include $(ROOT)/functions.Makefile
 STACK_ROOT 	= archive
 
 SBT_SSM_APPS = notifier
-SBT_APPS = archivist progress_async progress_http  registrar_async registrar_http bag_replicator
+SBT_APPS = archivist progress_async progress_http bags registrar_http bag_replicator
 SBT_DOCKER_LIBRARIES = archive_common progress_common
 SBT_NO_DOCKER_LIBRARIES = registrar_common archive_display
 
