--- a/storage/bags/universal/conf/application.conf.template
+++ b/storage/bags/universal/conf/application.conf.template
@@ -3,4 +3,4 @@ aws.sns.topic.arn="${progress_topic_arn}"
 aws.vhs.dynamo.tableName="${vhs_table_name}"
 aws.vhs.s3.bucketName="${vhs_bucket_name}"
 aws.vhs.s3.globalPrefix=archive
-metrics.namespace=registrar_async
+metrics.namespace=bags
