--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ cache:
     - archive/progress_common/target
     - archive/progress_http/target
     - archive/bags/target
-    - archive/registrar_common/target
+    - archive/bags_common/target
     - archive/registrar_http/target
 
 # Based on instructions from
@@ -164,7 +164,7 @@ jobs:
     - env: TASK=progress_common-test
     - env: TASK=progress_async-test
     - env: TASK=progress_http-test
-    - env: TASK=registrar_common-test
+    - env: TASK=bags_common-test
     - env: TASK=bags-test
     - env: TASK=registrar_http-test
     - env: TASK=notifier-test
