--- a/storage/ingests_api/Dockerfile
+++ b/storage/ingests_api/Dockerfile
@@ -2,4 +2,4 @@ FROM wellcome/typesafe_config_base:27
 
 ADD target/universal/stage /opt/docker
 
-ENV PROJECT=progress_http
+ENV PROJECT=ingests_api
