--- a/storage/ingests_api/src/main/resources/application.conf
+++ b/storage/ingests_api/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 aws.dynamo.tableName=${?archive_progress_table_name}
 aws.dynamo.tableIndex=${?archive_bag_progress_index_name}
-metrics.namespace=progress_http
+metrics.namespace=ingests_api
 http.externalBaseURL=${?app_base_url}
 http.host="0.0.0.0"
 http.port=9001
