--- a/storage/Makefile
+++ b/storage/Makefile
@@ -5,7 +5,7 @@ STACK_ROOT 	= archive
 
 SBT_SSM_APPS = notifier
 SBT_APPS = archivist ingests ingests_api bags bags_api bag_replicator
-SBT_DOCKER_LIBRARIES = archive_common progress_common
+SBT_DOCKER_LIBRARIES = archive_common ingests_common
 SBT_NO_DOCKER_LIBRARIES = bags_common archive_display
 
 ECS_TASKS   = bagger callback_stub_server
