--- a/storage/Makefile
+++ b/storage/Makefile
@@ -1,7 +1,7 @@
 ROOT = $(shell git rev-parse --show-toplevel)
 include $(ROOT)/functions.Makefile
 
-STACK_ROOT 	= archive
+STACK_ROOT 	= storage
 
 SBT_SSM_APPS = notifier
 SBT_APPS = archivist ingests ingests_api bags bags_api bag_replicator
@@ -11,7 +11,7 @@ SBT_NO_DOCKER_LIBRARIES = bags_common archive_display
 ECS_TASKS   = bagger callback_stub_server
 LAMBDAS     = lambdas/trigger_bag_ingest
 
-TF_NAME     = archive
+TF_NAME     = storage
 TF_PATH     = $(STACK_ROOT)/terraform
 TF_IS_PUBLIC_FACING = false
 
