build all archive apps with SBT_SSM_APPS & fix travis params

--- a/storage/Makefile
+++ b/storage/Makefile
@@ -3,8 +3,8 @@ include $(ROOT)/functions.Makefile
 
 STACK_ROOT 	= storage
 
-SBT_SSM_APPS = notifier
-SBT_APPS = archivist ingests ingests_api bags bags_api bag_replicator
+SBT_SSM_APPS = notifier archivist ingests ingests_api bags bags_api bag_replicator
+SBT_APPS =
 SBT_DOCKER_LIBRARIES = storage_common ingests_common
 SBT_NO_DOCKER_LIBRARIES = bags_common storage_display
 
