Use a proper JSON encoder, take two

--- a/builds/sbt_metadata/config_core.json
+++ b/builds/sbt_metadata/config_core.json
@@ -1,5 +1,1 @@
-{
-  "id": "config_core",
-  "folder": "sbt_common/config/core",
-  "dependsOn": ["common"]
-}
+{"id" : "config_core", "folder" : "sbt_common\/config\/core", "dependencyIds" : ["common"]}
