--- a/builds/sbt_metadata/config_messaging.json
+++ b/builds/sbt_metadata/config_messaging.json
@@ -1,5 +1,1 @@
-{
-  "id": "config_messaging",
-  "folder": "sbt_common/config/messaging",
-  "dependsOn": ["config_core", "config_monitoring", "config_storage"]
-}
+{"id" : "config_messaging", "folder" : "sbt_common\/config\/messaging", "dependencyIds" : ["config_core", "config_monitoring", "config_storage"]}
