--- a/builds/sbt_metadata/config_elasticsearch.json
+++ b/builds/sbt_metadata/config_elasticsearch.json
@@ -1,5 +1,1 @@
-{
-  "id": "config_elasticsearch",
-  "folder": "sbt_common/config/elasticsearch",
-  "dependsOn": ["config_core", "elasticsearch"]
-}
+{"id" : "config_elasticsearch", "folder" : "sbt_common\/config\/elasticsearch", "dependencyIds" : ["config_core", "elasticsearch"]}
