--- a/builds/sbt_metadata/config_storage.json
+++ b/builds/sbt_metadata/config_storage.json
@@ -1,5 +1,1 @@
-{
-  "id": "config_storage",
-  "folder": "sbt_common/config/storage",
-  "dependsOn": ["config_core"]
-}
+{"id" : "config_storage", "folder" : "sbt_common\/config\/storage", "dependencyIds" : ["config_core"]}
