--- a/builds/sbt_metadata/config_elasticsearch.json
+++ b/builds/sbt_metadata/config_elasticsearch.json
@@ -1,1 +1,8 @@
-{"id" : "config_elasticsearch", "folder" : "sbt_common\/config\/elasticsearch", "dependencyIds" : ["config_core", "elasticsearch"]}
+{
+  "id": "config_elasticsearch",
+  "folder": "sbt_common/config/elasticsearch",
+  "dependencyIds": [
+    "config_core",
+    "elasticsearch"
+  ]
+}
