--- a/builds/sbt_metadata/config_storage.json
+++ b/builds/sbt_metadata/config_storage.json
@@ -1,1 +1,7 @@
-{"id" : "config_storage", "folder" : "sbt_common\/config\/storage", "dependencyIds" : ["config_core"]}
+{
+  "id": "config_storage",
+  "folder": "sbt_common/config/storage",
+  "dependencyIds": [
+    "config_core"
+  ]
+}
