--- a/builds/sbt_metadata/config_monitoring.json
+++ b/builds/sbt_metadata/config_monitoring.json
@@ -1,1 +1,7 @@
-{"id" : "config_monitoring", "folder" : "sbt_common\/config\/monitoring", "dependencyIds" : ["config_core"]}
+{
+  "id": "config_monitoring",
+  "folder": "sbt_common/config/monitoring",
+  "dependencyIds": [
+    "config_core"
+  ]
+}
