Write the sbt metadata as pretty-printed JSON

--- a/builds/sbt_metadata/config_core.json
+++ b/builds/sbt_metadata/config_core.json
@@ -1,6 +1,6 @@
 {
   "id": "config_core",
-  "folder": "sbt_common/config/core",
+  "folder": "sbt_common\/config\/core",
   "dependencyIds": [
     "common"
   ]
