--- a/builds/sbt_metadata/config_elasticsearch.json
+++ b/builds/sbt_metadata/config_elasticsearch.json
@@ -1,6 +1,6 @@
 {
   "id": "config_elasticsearch",
-  "folder": "sbt_common/config/elasticsearch",
+  "folder": "sbt_common\/config\/elasticsearch",
   "dependencyIds": [
     "config_core",
     "elasticsearch"
