--- a/builds/sbt_metadata/config_storage.json
+++ b/builds/sbt_metadata/config_storage.json
@@ -1,6 +1,6 @@
 {
   "id": "config_storage",
-  "folder": "sbt_common/config/storage",
+  "folder": "sbt_common\/config\/storage",
   "dependencyIds": [
     "config_core"
   ]
