Publish the snapshot generator using SSM

--- a/data_api/Makefile
+++ b/data_api/Makefile
@@ -3,8 +3,8 @@ include $(ROOT)/functions.Makefile
 
 STACK_ROOT  = data_api
 
-SBT_APPS 	 = snapshot_generator
-SBT_SSM_APPS =
+SBT_APPS 	 =
+SBT_SSM_APPS = snapshot_generator
 
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES =
