Publish and fetch the Loris nginx image using SSM

--- a/nginx/Makefile
+++ b/nginx/Makefile
@@ -19,9 +19,6 @@ endef
 nginx-build-api-gw:
 	$(call nginx_build_image,api-gw,api-gw.Dockerfile.template)
 
-nginx-build-loris:
-	$(call nginx_build_image,loris,Dockerfile)
-
 nginx-build-services:
 	$(call nginx_build_image,services,services.Dockerfile.template)
 
@@ -36,14 +33,11 @@ nginx-build: nginx-build-loris nginx-build-services nginx-build-loris-delta ngin
 nginx-publish-api-gw: nginx-build-api-gw
 	$(call publish_service_ssm,nginx_api-gw,catalogue_api)
 
-nginx-publish-loris: nginx-build-loris
-	$(call publish_service,nginx_loris)
-
 nginx-publish-services: nginx-build-services
 	$(call publish_service,nginx_services)
 
 nginx-publish-loris-delta: nginx-build-loris-delta
-	$(call publish_service,nginx_loris-delta)
+	$(call publish_service_ssm,nginx_loris-delta,loris)
 
 nginx-publish-grafana: nginx-build-grafana
 	$(call publish_service,nginx_grafana)
