--- a/storage/archivist/src/main/resources/application.conf
+++ b/storage/archivist/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 aws.sqs.queue.url=${?queue_url}
-aws.next.sns.topic.arn=${?registrar_topic_arn}
+aws.next.sns.topic.arn=${?next_service_topic_arn}
 aws.sqs.queue.parallelism=${?queue_parallelism}
 aws.progress.sns.topic.arn=${?progress_topic_arn}
 upload.namespace=${?archive_bucket}
