--- a/catalogue_pipeline/transformer/Makefile
+++ b/catalogue_pipeline/transformer/Makefile
@@ -3,8 +3,8 @@ include $(ROOT)/functions.Makefile
 
 STACK_ROOT 	= catalogue_pipeline/transformer
 
-SBT_APPS 	 = transformer_miro transformer_sierra
-SBT_SSM_APPS =
+SBT_APPS 	 =
+SBT_SSM_APPS = transformer_miro transformer_sierra
 
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES =
