--- a/catalogue_pipeline/ingestor/src/universal/conf/application.conf.template
+++ b/catalogue_pipeline/ingestor/src/universal/conf/application.conf.template
@@ -1,5 +1,5 @@
 es.host="${es_host}"
-es.port=${es_port}
+es.port="${es_port}"
 es.index="${es_index}"
 aws.metrics.namespace="${metrics_namespace}"
 es.username="${es_username}"
