--- a/goobi_adapter/Makefile
+++ b/goobi_adapter/Makefile
@@ -7,6 +7,8 @@ STACK_ROOT  = goobi_adapter
 SBT_APPS 	 = goobi_reader
 SBT_SSM_APPS =
 
+ECR_BASE_URI =
+
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES =
 
