--- a/sierra_adapter/Makefile
+++ b/sierra_adapter/Makefile
@@ -9,6 +9,8 @@ SBT_APPS 	 = sierra_bib_merger \
                sierra_reader
 SBT_SSM_APPS =
 
+ECR_BASE_URI =
+
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES = sierra_adapter_common
 
