--- a/catalogue_api/Makefile
+++ b/catalogue_api/Makefile
@@ -6,6 +6,8 @@ STACK_ROOT 	= catalogue_api
 SBT_APPS 	 =
 SBT_SSM_APPS = api
 
+ECR_BASE_URI = 760097843905.dkr.ecr.eu-west-1.amazonaws.com/uk.ac.wellcome
+
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES =
 
