--- a/storage/Makefile
+++ b/storage/Makefile
@@ -12,6 +12,8 @@ SBT_SSM_APPS = notifier \
                bags_api \
                bag_replicator
 
+ECR_BASE_URI = 975596993436.dkr.ecr.eu-west-1.amazonaws.com/uk.ac.wellcome
+
 SBT_DOCKER_LIBRARIES    = storage_common ingests_common
 SBT_NO_DOCKER_LIBRARIES = bags_common storage_display
 
