add registry id

--- a/catalogue_pipeline/transformer/Makefile
+++ b/catalogue_pipeline/transformer/Makefile
@@ -7,6 +7,7 @@ SBT_APPS 	 =
 SBT_SSM_APPS = transformer_miro transformer_sierra
 
 ECR_BASE_URI = 760097843905.dkr.ecr.eu-west-1.amazonaws.com/uk.ac.wellcome
+REGISTRY_ID  = 760097843905
 
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES =
