--- a/reindexer/Makefile
+++ b/reindexer/Makefile
@@ -7,6 +7,7 @@ SBT_APPS 	 = reindex_worker
 SBT_SSM_APPS =
 
 ECR_BASE_URI =
+REGISTRY_ID  =
 
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES =
