--- a/storage/Makefile
+++ b/storage/Makefile
@@ -13,6 +13,7 @@ SBT_SSM_APPS = notifier \
                bag_replicator
 
 ECR_BASE_URI = 975596993436.dkr.ecr.eu-west-1.amazonaws.com/uk.ac.wellcome
+REGISTRY_ID  = 975596993436
 
 SBT_DOCKER_LIBRARIES    = storage_common ingests_common
 SBT_NO_DOCKER_LIBRARIES = bags_common storage_display
