Get the build system to understand about base ECR repos (#3404)
* Get the build system to understand about base ECR repos

* add registry id

* reg id

* use correct tag

* python tasks also need to push to another account

--- a/goobi_adapter/Makefile
+++ b/goobi_adapter/Makefile
@@ -7,6 +7,9 @@ STACK_ROOT  = goobi_adapter
 SBT_APPS 	 = goobi_reader
 SBT_SSM_APPS =
 
+ECR_BASE_URI =
+REGISTRY_ID  =
+
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES =
 
