--- a/data_api/Makefile
+++ b/data_api/Makefile
@@ -6,6 +6,9 @@ STACK_ROOT  = data_api
 SBT_APPS 	 =
 SBT_SSM_APPS = snapshot_generator
 
+ECR_BASE_URI = 760097843905.dkr.ecr.eu-west-1.amazonaws.com/uk.ac.wellcome
+REGISTRY_ID  = 760097843905
+
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES =
 
