--- a/reindexer/Makefile
+++ b/reindexer/Makefile
@@ -6,6 +6,9 @@ STACK_ROOT 	= reindexer
 SBT_APPS 	 = reindex_worker
 SBT_SSM_APPS =
 
+ECR_BASE_URI =
+REGISTRY_ID  =
+
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES =
 
